--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,5 +12,6 @@ services:
       - ./migration/0-initial-db.sql:/docker-entrypoint-initdb.d/0-docker-database-initial.sql
       - ./migration/1-user-roles.sql:/docker-entrypoint-initdb.d/1-user-roles.sql
       - ./migration/2-search-vector-trigger.sql:/docker-entrypoint-initdb.d/2-search-vector-trigger.sql
+      - ./postgres-data:/var/lib/postgresql/data
     restart: always
     command: -p 12345
