--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Remote Docker",
             "type": "go",
             "request": "launch",
-            "mode": "debug",
-            "program": "${workspaceFolder}/src/cmd/main.go"
+            "mode": "remote",
+            "remotePath": "/app/src",
+            "port": 2345,
+            "host": "localhost",
+            "program": "${workspaceFolder}/src",
+            "args": [],
+            "trace": "verbose",
+            "env": {}
         }
     ]
 }
