--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,10 +38,20 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-    - name: Run database migration
+    
+    - name: Install golang-migrate
       run: |
-        go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
-        migrate -database "postgres://root:root@localhost:5432/jobsfinder?sslmode=disable" -path ./migration up
+        curl --output install.sh https://raw.githubusercontent.com/pressly/goose/master/install.sh
+        sudo GOOSE_INSTALL=/usr sh install.sh
+        which goose
+
+    - name: Up migrations
+      run: goose -allow-missing -dir=./migrations postgres postgres://me:pass@localhost:5432/main?sslmode=disable up
+
+    - name: Down migrations
+      run: goose -allow-missing -dir=./migrations postgres postgres://me:pass@localhost:5432/main?sslmode=disable down
+    
+    
     - name: Test
       run: go test -v ./src/...
     
