--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -55,10 +55,24 @@ jobs:
 
     - name: Down migrations
       run: migrate -database "postgres://root:root@localhost:5432/jobsfinder?sslmode=disable" -path ./migration up
+      
+  sonarqube:
+    needs: int-tests
+    runs-on: ubuntu-latest
+    steps:
+    -
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    -
+      name: SonarQube scan
+      uses: SonarSource/sonarqube-scan-action@v4.2.1
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     
 
   build:
-    needs: int-tests
+    needs: sonarqube
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
